--- a/public/css/chat/chat.css
+++ b/public/css/chat/chat.css
@@ -48,6 +48,7 @@ html, body {
 #sendButton {
     width: auto; /* Adjust width as needed */
     flex-grow: 0; /* Prevent the button from growing */
+    margin-left: 10px !important;
 }
 .spinner-border {
     margin-left: 10px; /* Add some space between the button and the spinner */
@@ -65,3 +66,4 @@ pre code {
 }
 
 .copy-code-btn{margin-bottom: 30px;}
+#newChatButton{width: 100%;}
