--- a/public/css/chat/chat.css
+++ b/public/css/chat/chat.css
@@ -49,8 +49,8 @@ html, body {
 
 .user-message {
     text-align: right;
-    background-color: #000000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     padding: 15px;
 }
 
